✨ feat: 添加兔兔live2d模型

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -927,8 +927,7 @@ inject:
   head:
     # - <link rel="stylesheet" href="/css/custom.css" media="defer" onload="this.media='all'"> # 常规css
     - <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui@2.15.6/packages/theme-chalk/lib/index.css"> # 引入组件库(f12)
-    - <link rel="stylesheet" type="text/css" href="/css/jinrishici.css"> # 诗词&&
-    - <link rel="stylesheet" type="text/css" href="https://at.alicdn.com/t/c/font_4092704_l22qnk6x7q9.css"> #字体图标
+    - <link rel="stylesheet" type="text/css" href="/css/custom.css"> #诗词以及自定义样式
 
     # 综合美化模块样式引入
     - <style id="themeColor"></style> # 主题色
@@ -951,14 +950,16 @@ inject:
     - <script async src="//at.alicdn.com/t/c/font_3586335_hsivh70x0fm.js"></script> # js图标引入1
     - <script async src="//at.alicdn.com/t/c/font_3636804_gr02jmjr3y9.js"></script> # js图标引入2
     - <script async src="//at.alicdn.com/t/c/font_3612150_kfv55xn3u2g.js"></script> # js图标引入3
+    - <script async src="//at.alicdn.com/t/c/font_4092704_qp95889n2cm.js"></script> # 字体图标(自己)
     # - <script async src="https://cdn.wpon.cn/2022-sucai/Gold-ingot.js"></script> # 新年元宝
     - <canvas id="universe"></canvas> # 星空画布
     - <canvas id="snow"></canvas> # 雪花画布
     # - <script async src="https://npm.elemecdn.com/tzy-blog/lib/js/other/sakura.js"></script> # 樱花飘落效果
+    - <script defer src="/js/wisdom.js"></script> # 弱智吧
     - <script defer src="/js/fomal.js"></script> # 主模块js
     - <script async data-pjax src="/js/txmap.js"></script> # 腾讯位置API
     # 底部音乐播放器
-    - <div class="aplayer no-destroy" id="bottom_aplayer" data-id="2733900165" data-server="netease" data-type="playlist" data-autoplay="false" data-fixed="true" data-mini="true" data-listFolded="false" data-order="random" data-preload="none" muted></div>
+    - <div id='oml2d'><div class="aplayer no-destroy" id="bottom_aplayer" data-id="2733900165" data-server="netease" data-type="playlist" data-autoplay="false" data-fixed="true" data-mini="true" data-listFolded="false" data-order="random" data-preload="none" muted></div></div>
 
 # CDN
 # Don't modify the following settings unless you know how they work
