--- a/_config.yml
+++ b/_config.yml
@@ -238,66 +238,66 @@ bangumi:
   show: 1
   lazyload: false
 
-# 豆瓣影院模块
-douban:
-  id: 271110737 # 你的豆瓣ID
-  builtin: false
-  movie:
-    path: /relaxation/movies
-    title: "影院"
-    comments: false
-    aside: true
-    quote: '<div class="wjl_rating">
-      <input value="star-1" name="star-radio" id="star-1" type="radio">
-      <label for="star-1">
-      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
-      </label>
-      <input value="star-1" name="star-radio" id="star-2" type="radio">
-      <label for="star-2">
-      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
-      </label>
-      <input value="star-1" name="star-radio" id="star-3" type="radio">
-      <label for="star-3">
-      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
-      </label>
-      <input value="star-1" name="star-radio" id="star-4" type="radio">
-      <label for="star-4">
-      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
-      </label>
-      <input value="star-1" name="star-radio" id="star-5" type="radio">
-      <label for="star-5">
-      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
-      </label>
-      </div>'
-  game:
-    path: /box/games
-    title: "游戏"
-    comments: false
-    aside: true
-    quote: '<div class="wjl_rating">
-      <input value="star-1" name="star-radio" id="star-1" type="radio">
-      <label for="star-1">
-      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
-      </label>
-      <input value="star-1" name="star-radio" id="star-2" type="radio">
-      <label for="star-2">
-      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
-      </label>
-      <input value="star-1" name="star-radio" id="star-3" type="radio">
-      <label for="star-3">
-      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
-      </label>
-      <input value="star-1" name="star-radio" id="star-4" type="radio">
-      <label for="star-4">
-      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
-      </label>
-      <input value="star-1" name="star-radio" id="star-5" type="radio">
-      <label for="star-5">
-      <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
-      </label>
-      </div>'
+# # 豆瓣影院模块
+# douban:
+#   id: 271110737 # 你的豆瓣ID
+#   builtin: false
+#   movie:
+#     path: /relaxation/movies
+#     title: "影院"
+#     comments: false
+#     aside: true
+#     quote: '<div class="wjl_rating">
+#       <input value="star-1" name="star-radio" id="star-1" type="radio">
+#       <label for="star-1">
+#       <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+#       </label>
+#       <input value="star-1" name="star-radio" id="star-2" type="radio">
+#       <label for="star-2">
+#       <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+#       </label>
+#       <input value="star-1" name="star-radio" id="star-3" type="radio">
+#       <label for="star-3">
+#       <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+#       </label>
+#       <input value="star-1" name="star-radio" id="star-4" type="radio">
+#       <label for="star-4">
+#       <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+#       </label>
+#       <input value="star-1" name="star-radio" id="star-5" type="radio">
+#       <label for="star-5">
+#       <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+#       </label>
+#       </div>'
+#   game:
+#     path: /box/games
+#     title: "游戏"
+#     comments: false
+#     aside: true
+#     quote: '<div class="wjl_rating">
+#       <input value="star-1" name="star-radio" id="star-1" type="radio">
+#       <label for="star-1">
+#       <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+#       </label>
+#       <input value="star-1" name="star-radio" id="star-2" type="radio">
+#       <label for="star-2">
+#       <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+#       </label>
+#       <input value="star-1" name="star-radio" id="star-3" type="radio">
+#       <label for="star-3">
+#       <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+#       </label>
+#       <input value="star-1" name="star-radio" id="star-4" type="radio">
+#       <label for="star-4">
+#       <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+#       </label>
+#       <input value="star-1" name="star-radio" id="star-5" type="radio">
+#       <label for="star-5">
+#       <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z" pathLength="360"></path></svg>
+#       </label>
+#       </div>'
 
-  timeout: 10000
+#   timeout: 10000
 
 # 小冰分类磁贴
 magnet:
@@ -340,6 +340,59 @@ magnet:
     index: 0
   temple_html: '<div class="recent-post-item" style="width:100%;height: auto"><div id="catalog_magnet">${temple_html_item}</div></div>'
   plus_style: ""
+
+#live2d模型配置
+OhMyLive2d:
+  enable: true
+  CDN: https://registry.npmmirror.com/oh-my-live2d/0.13/files/dist/index.min.js
+  option:
+    # importType: 'cubism2' #  导入类型, 默认使用全量导入: complete , 可选值: complete, cubism2, cubism5
+    libraryUrls: # 自定义 Cubism SDK 外部资源地址
+      complete: https://registry.npmmirror.com/oh-my-live2d/latest/files/lib/complete.js
+      cubism2: https://registry.npmmirror.com/oh-my-live2d/latest/files/lib/cubism2.js
+      cubism5: https://registry.npmmirror.com/oh-my-live2d/latest/files/lib/cubism5.js
+    menus:
+      items: |
+        (defaultItems)=>{
+          return [
+            defaultItems[0],
+            {
+              id: 'change',
+              title: '箴言',
+              icon: 'icon-qiehuan',
+              onClick(oml2d) {
+                oml2d.tipsMessage(getRandomQuote());
+              }
+            },
+            defaultItems[2]
+          ];
+        }
+
+    mobileDisplay: false # 是否在移动端显示
+    models:
+      - path: /live2d/兔兔-阿米娅.model3.json
+        position: [-30, 78] # 模型在舞台中的位置。 默认值: [0,0] [横坐标, 纵坐标]
+        scale: 0.08 # 模型的缩放比例 默认值: 0.1
+        stageStyle:
+          height: 250
+    parentElement: document.getElementById('oml2d') #为组件提供一个父元素，如果未指定则默认挂载到 body 中
+    primaryColor: "var(--btn-bg)" # 主题色 支持变量
+    sayHello: false # 是否在初始化阶段打印项目信息
+    statusBar:
+      restMessage: "兔兔休息中"
+    tips:
+      style:
+        width: 220
+        height: auto
+        left: calc(50% + 25px)
+        top: 0
+        fontSize: 16px
+      idleTips:
+        interval: 30000
+        message: |
+          function(){
+            return getRandomQuote()
+          }
 
 # 恋爱秘密
 encrypt: # hexo-blog-encrypt
