📃 docs(友人帐): 更新友链

--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -175,7 +175,7 @@
 
     - name: 林熙の博客
       link: https://linxiy.ink
-      avatar: https://www.linxiy.com/images/2024/05/02/17146140766632ef3c243be.webp
+      avatar: https://www.linxiy.com/tx.webp
       descr: 一位爱生活游戏的休闲博主
       screenshot:
 
