✨ feat: 添加文章背景

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -176,6 +176,8 @@ cover:
     - /assets/images/blog_bg/35.webp
     - /assets/images/blog_bg/36.webp
     - /assets/images/blog_bg/37.webp
+    - /assets/images/blog_bg/38.webp
+    - /assets/images/blog_bg/39.webp
     # ...
 
 # A simple 404 page
