--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -191,6 +191,12 @@
       descr: Everything that kills me makes me feel alive.
       screenshot: https://blog.rain.ink/wp-content/uploads/2024/07/1720230898-shot.png
 
+    - name: dimzone
+      link: dimzone.cn
+      avatar: https://pic.imgdb.cn/item/6692e0edd9c307b7e9d99261.jpg
+      descr: 九月露湿，待君之前
+      screenshot: https://pic.imgdb.cn/item/6695759ed9c307b7e901a478.png
+
 - class_name: 失联中...🔗
   link_list:
     - name: Shine
