✨ feat: 添加图片以及文章背景图

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -178,6 +178,9 @@ cover:
     - /assets/images/blog_bg/37.webp
     - /assets/images/blog_bg/38.webp
     - /assets/images/blog_bg/39.webp
+    - /assets/images/blog_bg/40.webp
+    - /assets/images/blog_bg/41.webp
+    - /assets/images/blog_bg/42.webp
     # ...
 
 # A simple 404 page
