--- a/_config.yml
+++ b/_config.yml
@@ -234,7 +234,7 @@ bangumi:
   vmid: 392071577
   path: /relaxation/bangumis/index.html
   title: "追番"
-  quote: "都是爷喜欢的动漫！！！"
+  quote: "追番追番！！！"
   show: 1
   lazyload: false
 
