--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -181,9 +181,9 @@
       descr: 记录学习历程，记录美好生活
       screenshot:
 
-    - name: Donghao小站
+    - name: 善小逸🍊
       link: https://www.donghao.ltd/
-      avatar: https://img.donghao.ltd/img/touxiang.webp
+      avatar: https://img.donghao.ltd/img/touxiang.jpg
       descr: 所有打不倒你的难，最终都会变成你身上的光。
       screenshot: https://img.donghao.ltd/img/%E5%8F%8B%E9%93%BE/blog.donghao.ltd.jpg
 
